logs/pylinktester.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/core'...
Compiling './lib/python3.5/site-packages/core/bfs.py'...
***   File "./lib/python3.5/site-packages/core/bfs.py", line 21
    print "第%d层未访问链接出队 \"%s\" "%(current, visitUrl)
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/core/demo.py'...
***   File "./lib/python3.5/site-packages/core/demo.py", line 7
    print a.decode('gbk').encode(type)
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/core/test.py'...
***   File "./lib/python3.5/site-packages/core/test.py", line 22
    print '剩余链接数量',urlSync.getUnvistedUrlCount()
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/model'...
Compiling './lib/python3.5/site-packages/model/urlSync.py'...
***   File "./lib/python3.5/site-packages/model/urlSync.py", line 21
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pylinktester-0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/threads'...
Compiling './lib/python3.5/site-packages/threads/threadController.py'...
***   File "./lib/python3.5/site-packages/threads/threadController.py", line 46
    print "spliderThread[%s] 爬取完毕!" % st.getName()
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/utils'...
Compiling './lib/python3.5/site-packages/utils/testUrls.py'...
***   File "./lib/python3.5/site-packages/utils/testUrls.py", line 23
    except urllib2.HTTPError, ex:
                            ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
